<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryColor"
    android:theme="@style/ThemeOverlay.TFLitePoseEstimation.FullscreenContainer"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_muscle"/>

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:background="@color/primaryVeryLightColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/counter"
                    android:fontFamily="@font/montserrat_bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="160dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@color/white"
                    android:text="@string/counter_desc"
                    android:fontFamily="@font/montserrat_italic"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/counter_button"
                    app:cornerRadius="10dp"
                    android:elevation="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/primaryColor"
                    android:textStyle="bold"
                    android:text="@string/start"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="end"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:background="@color/primaryVeryLightColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/history"
                    android:fontFamily="@font/montserrat_bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="160dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@color/white"
                    android:text="@string/workout_history"
                    android:fontFamily="@font/montserrat_italic"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/history_button"
                    android:clickable="true"
                    android:focusable="true"
                    app:cornerRadius="10dp"
                    android:elevation="0dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/primaryColor"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_gravity="end"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>



</FrameLayout>